# rugit

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  lib.rs  main.rs
