[package]
name = "rugit"
version = "0.1.2"
edition = "2021"
description = "An elementary Git implementation in Rust"
license = "MIT"
authors = ["Yari DeWalt yari.dewalt@gmail.com"]
repository = "https://github.com/yari-dewalt/rugit"

[[bin]]
name = "rugit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.134"
sha1 = "0.10.6"
similar = "2.6.0"
tempfile = "3.14.0"
walkdir = "2.5.0"
